--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ node_modules
 # IPFS Storage #
 #################
 ipfs-leo
+ipfs-storage-no-git/poc/
 # reify cach #
 #################
 .reify-cache
