--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/elastos/Leo.Simulator.Node"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.5.5",
