--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "colors": "^1.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "express-validation": "^1.0.2",
     "helmet": "^3.20.0",
