--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,11 @@
-version: '3'
-services:
-  computer-leo:
-    container_name: leo
-    image: liyangwood/computer-leo:0.0.1
-    volumes:
-      # - ./python/run.py:/LEO/run1.py
-      - ./test.jpg:/LEO/test.jpg
-    command: python run.py
+
+      version: '3'
+      services:
+        computer-leo:
+          container_name: leo
+          image: kevingzhang/leo_python:demo201909
+          volumes:
+            - ./run.py:/LEO/run.py
+            - ./test.jpg:/LEO/test.jpg
+          command: python run.py
+        
