--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ipfs": "^0.37.1",
     "ipfs-pubsub-room": "github:kevingzhang/ipfs-pubsub-room",
     "js-sha256": "^0.9.0",
+    "libp2p-gossipsub": "0.0.5",
     "method-override": "^3.0.0",
     "peer-id": "^0.13.2",
     "underscore": "^1.9.1",
